2003-07-22 Alexandre Pigolkine <pigolkine@gmx.de>
	* Image.cs	implementation added
	
2003-07-21  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* Icon.cs: Stubed out (fix for System.Drawing.Design)

2003-07-17  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* StringFormat.cs: Changes to become CLS-compliant

2003-07-14  Miguel de Icaza  <miguel@ximian.com>

	* Factories.cs: Remove debugging message.

2003-07-01 Alexandre Pigolkine <pigolkine@gmx.de>
	* Color.cs	code generation program modified

2003-06-29 Alexandre Pigolkine
	* Graphics.cs	image drawing

2003-06-28 Alexandre Pigolkine <pigolkine@gmx.de>
	* Color.cs			
	* SystemColors.cs	
		supply KnowColor enum value to save Enum.Parse at runtime

2003-06-26 Alexandre Pigolkine <pigolkine@gmx.de>
	* Graphics.cs		coordinate transformations
	* Image.cs			small fix

2003-06-22 Alexandre Pigolkine <pigolkine@gmx.de>
	* Factories.cs
	* FontFamily.cs		more implementation

2003-06-20 Alexandre Pigolkine <pigolkine@gmx.de>
	* Font.cs
	* FontFamily.cs		more implementation

2003-06-18 Alexandre Pigolkine <pigolkine@gmx.de>
	* Graphics.cs		few more calls to implementation

2003-06-15 Alexandre Pigolkine <pigolkine@gmx.de>
    * Bitmap.cs 		BITMAP declaration removed
	* Graphics.cs		few more calls to implementation
	* Image.cs			InternalImageInfo structure, image read/write functions
			
			
2003-05-26 Alexandre Pigolkine <pigolkine@gmx.de>
	* Factories.cs	analyse environment variable and machine.config to select implementation
	* Image.cs		PixelFormat property added

2003-04-30  Nick Drochak <ndrochak@gol.com>

	* Factories.cs: Change weird characters that broke build on windows.

2003-04-26  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ColorConverter.cs:
	(ConvertFrom): return a system or named color if there's one that fits
	teh values parsed with Color.FromArgb.

2003-04-26  Alexandre Pigolkine <pigolkine@gmx.de>
	* Bitmap.cs
	* Brush.cs
	* Font.cs
	* Graphics.cs
	* Image.cs
	* Pen.cs
	* SolidBrush.cs